--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,18 +1,43 @@
 .sendForm {
-
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
 }
 
 .textarea {
-
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    resize: none;
+    font-size: 14px;
+    margin-right: 40px;
+    box-sizing: border-box;
+    overflow: hidden;
+    box-shadow: 0 1px 2px 0 rgba(29, 33, 38, 0.1),0 5px 20px 0 rgba(29, 33, 38, 0.03);
+    background: rgb(245, 247, 251);
 }
 
 .button {
-
+    width: 100px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    color: rgb(255, 255, 255);
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0;
+    text-align: left;
+    background: rgb(0, 102, 204);
 }
 
 .button:hover {
-
+    background-color: #529ff2;
 }
 .button:active {
-
+    background-color: #096dd9;
 }
