--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,31 +1,62 @@
 .message {
-
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-right: 10px;
+    margin-bottom: 40px;
 }
 
 .imageAndText {
-
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    margin-bottom: 5px;
 }
 
 .imageAndText img {
-
+    height: 70px;
+    align-self: flex-end;
 }
 
 .text {
-
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    display: flex;
+    letter-spacing: 0;
+    flex-direction: column;
+    margin-right: 10px;
+    color: rgb(255, 255, 255);
+    border-radius: 15px;
+    padding: 5px 20px;
+    box-shadow: 0 1px 2px 0 rgba(29, 33, 38, 0.1),0 5px 20px 0 rgba(29, 33, 38, 0.03);
+    background: rgb(0, 102, 204);
 }
 
-.text:after {
-
-}
+/*.text:after {*/ /*}*/
 
 .name {
-
+    color: rgb(255, 255, 255);
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 22px;
+    letter-spacing: 0;
+    text-align: left;
+    margin-bottom: 10px;
 }
 
-.messageText {
-
-}
+/*.messageText {*/
+/*    white-space: pre-wrap; !* Для поддержки переноса строк *!*/
+/*}*/
 
 .time {
-
+    color: rgb(0, 0, 0);
+    font-family: Montserrat;
+    font-size: 10px;
+    font-weight: 600;
+    line-height: 12px;
+    letter-spacing: 0;
+    text-align: left;
 }
