--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -19,10 +19,14 @@
 }
 
 .friendText {
-    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
     display: flex;
+    letter-spacing: 0;
     flex-direction: column;
-    margin-right: 10px;
+    margin-left: 10px;
     border-radius: 15px;
     padding: 5px 20px;
     box-shadow: 0 1px 2px 0 rgba(29, 33, 38, 0.1),0 5px 20px 0 rgba(29, 33, 38, 0.03);
@@ -34,8 +38,14 @@
 /*}*/
 
 .friendName {
-    font-weight: bold;
     margin-bottom: 10px;
+    color: rgb(0, 0, 0);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0;
+    text-align: left;
 }
 
 /*.friendMessageText {*/
@@ -44,10 +54,10 @@
 
 .friendTime {
     color: rgb(0, 0, 0);
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 10px;
     font-weight: 600;
     line-height: 12px;
     letter-spacing: 0;
-    text-align: left;
+    margin-left: 24px;
 }
