--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -26,12 +26,12 @@
     cursor: pointer;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     color: rgb(255, 255, 255);
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 16px;
     font-weight: 600;
     line-height: 20px;
     letter-spacing: 0;
-    text-align: left;
+    text-align: center;
     background: rgb(0, 102, 204);
 }
 
