--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -19,7 +19,7 @@
 }
 
 .text {
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
@@ -38,12 +38,12 @@
 
 .name {
     color: rgb(255, 255, 255);
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     font-weight: 600;
     line-height: 22px;
     letter-spacing: 0;
-    text-align: left;
+    text-align: right;
     margin-bottom: 10px;
 }
 
@@ -53,10 +53,10 @@
 
 .time {
     color: rgb(0, 0, 0);
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 10px;
     font-weight: 600;
     line-height: 12px;
     letter-spacing: 0;
-    text-align: left;
+    margin-right: 24px;
 }
