--- a/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
@@ -27,7 +27,7 @@
 
 /* Стили для инпута с ошибкой */
 .errorInput {
-    border: 1px solid red; /* Красная рамка */
+    border: 1px solid #e30101; /* Красная рамка */
 }
 
 /* Стили для инпута с ошибкой при фокусировке */
@@ -38,7 +38,7 @@
 
 /* Стили для сообщения об ошибке */
 .error {
-    color: red; /* Красный цвет текста */
+    color: #e30101; /* Красный цвет текста */
     font-size: 12px; /* Размер шрифта для сообщения об ошибке */
     margin-top: 5px; /* Отступ сверху */
 }
