--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -8,7 +8,7 @@
     height: 60px;
     left: 0;
     top: 0;
-    box-shadow: 0px 0px 2px 0px rgba(29, 33, 38, 0.1),0px 0px 40px 0px rgba(29, 33, 38, 0.13);
+    box-shadow: 0 0 2px 0 rgba(29, 33, 38, 0.1),0 0 40px 0 rgba(29, 33, 38, 0.13);
     background: rgb(255, 255, 255);
 }
 
@@ -19,10 +19,10 @@
     left: 1086px;
     top: 17px;
     color: rgb(0, 0, 0);
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 24px;
     font-weight: 600;
     line-height: 29px;
-    letter-spacing: 0%;
+    letter-spacing: 0;
     text-align: left;
 }
