--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -13,15 +13,26 @@
 }
 
 .header h1 {
-    display: flex;
-    justify-content: center;
-    text-align: left;
     font-size: 24px; /* Увеличен размер для выделения заголовка */
     margin: 0; /* Убираем отступы */
     color: #000; /* Четкий черный текст */
 }
 
 .burgerMenuIcon {
-    display: none; /* Скрыть на больших экранах, использовать на мобильных */
+    display: flex;
 }
 
+/*@media (max-width: 768px) {*/
+/*    .header {*/
+/*        flex-direction: column;*/
+/*        align-items: flex-start; !* Заголовок и навигация становятся в колонку *!*/
+/*    }*/
+
+/*    .burgerMenuIcon {*/
+/*        display: block; !* Показать значок бургер-меню на мобильных *!*/
+/*        background: #000;*/
+/*        width: 30px;*/
+/*        height: 3px;*/
+/*        margin: 5px 0;*/
+/*    }*/
+/*}*/
